<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker Pal</string>
    <string name="playerLabel">Players</string>
    <string name="bankLabel">Stack</string>
    <string name="betLabel">Bet</string>
    <string name="sitLabel">Sit</string>
    <string name="action_settings">Settings</string>

    <string name="pot">Pot</string>
    <string name="totalPotLabel">Total Pot</string>
    <string name="totalPotString">000000</string>
    <string name="potString">0000</string>

    <string name="setting">*</string>

    <string name="clockLabel">Clock</string>
    <string name="clock">5:00</string>

    <string name="player1">Player 1  -- 2000 -- Bet 75 -- o</string>
    <string name="player2">Player 2  -- Bet __ -- *</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>
    <string name="player6">Player 6</string>
    <string name="player7">Player 7</string>
    <string name="player8">Player 8</string>
    <string name="player9">Player 9</string>

    <string name="bet">Bet</string>
    <string name="call">Call</string>
    <string name="fold">Fold</string>
    <string name="check">Check</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_menu">Main Menu</string>

    <string name="betPrompt">Enter your bet: </string>

    <string name="newGame">New Game</string>
    <string name="loadGame">Continue</string>

    <string name="resume">Resume</string>
    <string name="addplayer">Add/Remove Player</string>
    <string name="save">Save Game</string>
    <string name="moneyplayer">Add/Remove Money</string>

    <string name="playername">Player Name</string>
    <string name="confirm">Confirm</string>

    <string name="CreatingGame">Creating Game</string>
    <string name="numofplayers">Number of Players</string>
    <string name="startingstack">Starting Stacks</string>


</resources>
