<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".pokergame"
    android:background="@drawable/perlinfelt1">


    <TextView
        android:textColor="#ffffff"
        android:id="@+id/totalP"
        android:text="@string/totalPotLabel"
        android:gravity="start"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="#ffffff"
        android:id="@+id/potnumber"
        android:text="@string/totalPotString"
        android:textSize="26sp"
        android:layout_width="185dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="-5dp"
        android:layout_toEndOf="@+id/totalP"/>


    <TextView
        android:textColor="#ffffff"
        android:id="@+id/thePot"
        android:text="@string/pot"
        android:textSize="20sp"
        android:layout_alignStart="@id/totalP"
        android:layout_alignEnd="@id/totalP"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalP" />

    <TextView
        android:textColor="#ffffff"
        android:id="@+id/thepotnumber"
        android:text="@string/potString"
        android:textSize="18sp"
        android:layout_alignStart="@id/potnumber"
        android:layout_alignEnd="@id/potnumber"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalP"/>


    <TextView
        android:textColor="#ffffff"
        android:id="@+id/clockTitle"
        android:text="@string/clockLabel"
        android:textSize="22sp"
        android:layout_width="75dip"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="#ffffff"
        android:id="@+id/clock"
        android:text="@string/clock"
        android:textSize="26sp"
        android:layout_width="0dp"
        android:layout_alignStart="@id/clockTitle"
        android:layout_alignEnd="@id/clockTitle"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockTitle"/>



    <!-- PLAYERS STRING NAME

       -->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thePot"
        android:id="@+id/PlayerListView"
        android:layout_above="@+id/linearLayout" />


    <!-- Button Functions
     1. bet would have a popup of up an down of what you can bet
     2. and the Bet button will turn into raise after the first bet-->


<LinearLayout
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:id="@+id/linearLayout">
    <!--   android:style="?android:attr/buttonBarStyle"-->
    <!--  android:style="?android:attr/buttonBarButtonStyle"-->
    <Button
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/bet"
        android:id="@+id/bet"
        android:layout_weight="33.33" />
        <!--android:onClick="betClick"-->

    <Button
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/call"
        android:id="@+id/call"
        android:layout_weight="33.33"/>

    <Button
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/fold"
        android:id="@+id/fold"
        android:layout_weight="33.33" />

</LinearLayout>



    <!-- Missing
     Setting 1. add/remove player
     Button. stop time
     Button for menu

     -->



</RelativeLayout>
