<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="givememoney.pokerpal.IngameOption">


    <Button
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="@string/resume"
        android:id="@+id/button0"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_below="@id/button0"
        android:text="@string/addplayer"
        android:id="@+id/button1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_below="@id/button1"
        android:text="@string/save"
        android:id="@+id/button2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_below="@id/button2"
        android:text="New Button"
        android:id="@+id/button3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_below="@id/button3"
        android:text="@string/title_activity_main_menu"
        android:id="@+id/button4"/>


</RelativeLayout>
