<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="givememoney.pokerpal.ChooseGameOptions">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CreatingGame"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numofplayers"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText9"
        android:gravity="center"
        android:layout_alignEnd="@id/textView4"
        android:layout_below="@id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/startingstack"
        android:id="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/textView4"
        android:layout_marginEnd="15dip"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@id/textView7"
        android:layout_below="@id/textView7" />

    <Button
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="populateInfoConfirm"/>




</RelativeLayout>
